--- a/requirements.txt
+++ b/requirements.txt
@@ -31,8 +31,8 @@ pillow=6.1.0=py37h34e0f95_0
 pip=19.2.2=py37_0
 pycparser=2.19=py37_0
 python=3.7.4=h265db76_1
-pytorch=1.1.0=py3.7_cuda10.0.130_cudnn7.5.1_0
-pytorch-nightly=1.0.0.dev20190328=py3.7_cuda10.0.130_cudnn7.4.2_0
+#pytorch=1.1.0=py3.7_cuda10.0.130_cudnn7.5.1_0
+#pytorch-nightly=1.0.0.dev20190328=py3.7_cuda10.0.130_cudnn7.4.2_0
 readline=7.0=h7b6447c_5
 scipy=1.2.1=py37h7c811a0_0
 setuptools=41.0.1=py37_0
